--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "agentic-x402",
-  "version": "0.2.6",
+  "version": "0.3.0",
   "description": "Agent skill for x402 payments - pay for and sell gated content",
   "type": "module",
   "bin": {
     "x402": "./bin/x402.js"
   },
+  "openclaw": {
+    "extensions": ["./scripts/plugin/index.ts"]
+  },
   "files": [
     "bin/",
     "scripts/",
+    "skills/",
     "config/example.env",
+    "openclaw.plugin.json",
     "README.md",
     "SKILL.md"
   ],
